# CascLibPlus

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
include/: CascFile.hpp  CascIterator.hpp  CascLib.hpp  CascStorage.hpp
src/: CascFile.cpp  CascIterator.cpp  CascStorage.cpp
